fly in and out for mobile doesn´t work correctly
I also tried it with an animation, but we get a horizontal scrollbar.

--- a/style/style.css
+++ b/style/style.css
@@ -130,11 +130,6 @@ header {
 }
 
 @media (max-width: 480px) {
-    header {
-        z-index: 1300;
-        /* während die sidebar noch nicht responsive ist */
-    }
-
     .header-content {
         justify-content: space-between;
         padding: 20px 16px;
@@ -147,10 +142,12 @@ header {
     .user-menu {
         transition: transform 100ms ease-in-out;
     }
-
-    .menu-closed {
+    
+/* 
+    Das Ein- und Ausfliegen des Menues für mobile funktioniert noch nicht. Irgendwo gehört "overflow-x: hidden" hin. */
+    /* .menu-closed {
         display: flex;
-    }
+    } */
 
     .btn-help {
         display: none;
